[package]
name = "photon"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
strip = true
panic = "abort"
opt-level = 3
codegen-units = 1

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.5.16", features = ["derive"] }
curl = "0.4.47"
httparse = "1.9.4"
lazy_static = "1.5.0"
md-5 = "0.10.6"
pest = "2.7.11"
pest_derive = "2.7.11"
regex = "1.10.6"
rustc-hash = "2.0.0"
ureq = "2.10.1"
url = "2.5.2"
walkdir = "2.5.0"
yaml-rust2 = "0.8.1"
