[workspace]
members = [
    "photon-dsl",
    "photon",
    "photon-cli"
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true
panic = "abort"
# optimize for size, brings resulting binary size from e.g. 3MB -> 2.6MB, *slightly* slower binary, but worth it IMO
opt-level = "s"
codegen-units = 1
