[lib]
crate-type = ["rlib"]

[package]
name = "photon"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
photon_dsl = { path = "../photon-dsl" }
regex = "1.10.6"
rustc-hash = "2.0.0"
base16ct = { version = "0.2.0", features = ["alloc"] }
curl = { version = "0.4.47", default-features = false }
curl-sys = { version = "0.4.77", default-features = false }
httparse = "1.9.4"
md-5 = "0.10.6"
url = "2.5.2"
walkdir = "2.5.0"
yaml-rust2 = "0.9.0"
rand = "0.8.5"
bincode = "2.0.0-rc.3"
lz4 = "1.28.0"
lazy_static = "1.5.0"
base64 = "0.22.1"

[features]
default = ["curl/ssl"]
rustls = ["curl/rustls"]
